Prevent projects grid overflow on low width

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -251,6 +251,13 @@ a:visited {
     }
 }
 
+@media (max-width: 300px) {
+    .projects-grid {
+        grid-template-columns: auto;
+    }
+}
+
+
 .project-item > a {
     grid-area: title;
     color: var(--light);
